--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Java 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
@@ -58,23 +58,12 @@ jobs:
           autopoint \
           pkg-config \
           m4 \
-          gettext \
-          autoconf-archive
+          gettext
 
     - name: Install buildozer
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv buildozer
-
-    - name: Configure build environment
-      run: |
-        sudo mkdir -p /usr/share/libtool/config
-        sudo cp /usr/share/libtool/build-aux/config.* /usr/share/libtool/config/
-        sudo libtoolize --force
-        sudo aclocal -I /usr/share/aclocal
-        sudo autoheader
-        sudo automake --force-missing --add-missing
-        sudo autoconf
 
     - name: Accept Android licenses
       run: |
@@ -89,7 +78,8 @@ jobs:
         buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: moneymanager-debug
         path: bin/*.apk
+        compression-level: 0
