--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,15 +55,36 @@ jobs:
           libssl-dev \
           zip \
           unzip \
-          autopoint \
           pkg-config \
-          m4 \
-          gettext
+          gettext \
+          autoconf-archive
 
     - name: Install buildozer
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv buildozer
+
+    - name: Configure autotools
+      run: |
+        sudo apt-get install -y autotools-dev
+        sudo apt-get install -y libtool-bin
+        sudo apt-get install -y autoconf-archive
+        sudo apt-get install -y automake
+        sudo apt-get install -y m4
+        
+        # Create necessary directories
+        sudo mkdir -p /usr/share/libtool/build-aux
+        sudo mkdir -p /usr/share/libtool/config
+        
+        # Copy config files
+        sudo cp /usr/share/libtool/build-aux/config.* /usr/share/libtool/config/ || true
+        
+        # Run autotools commands
+        libtoolize --force
+        aclocal
+        autoheader
+        automake --force-missing --add-missing
+        autoconf
 
     - name: Accept Android licenses
       run: |
@@ -80,6 +101,6 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: moneymanager-debug
+        name: trendingvideos-debug
         path: bin/*.apk
         compression-level: 0
