--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,23 +39,12 @@ jobs:
           libgstreamer1.0 \
           gstreamer1.0-plugins-base \
           gstreamer1.0-plugins-good \
-          libgstreamer1.0-dev \
-          autoconf \
-          automake \
-          libtool \
-          pkg-config
+          libgstreamer1.0-dev
 
     - name: Install buildozer
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv buildozer
-
-    - name: Initialize build system
-      run: |
-        aclocal
-        autoconf
-        automake --add-missing
-        ./configure
 
     - name: Build APK
       run: |
