--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,12 +46,18 @@ jobs:
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv buildozer
 
+    - name: Clean buildozer
+      run: |
+        rm -rf .buildozer
+        rm -rf bin
+
     - name: Accept Android licenses
       run: |
         yes | sudo ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
     - name: Build APK
       run: |
+        buildozer android clean
         buildozer android debug
 
     - name: Upload APK
