--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,25 @@ jobs:
           libgstreamer1.0 \
           gstreamer1.0-plugins-base \
           gstreamer1.0-plugins-good \
-          libgstreamer1.0-dev
+          libgstreamer1.0-dev \
+          libtool \
+          libtool-bin \
+          autoconf \
+          automake \
+          pkg-config
 
-    - name: Install buildozer
+    - name: Install buildozer and p4a
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv buildozer
+        pip install python-for-android
+
+    - name: Setup python-for-android
+      run: |
+        mkdir -p $HOME/.buildozer/android/platform
+        git clone https://github.com/kivy/python-for-android.git $HOME/.buildozer/android/platform/python-for-android
+        cd $HOME/.buildozer/android/platform/python-for-android
+        python setup.py install
 
     - name: Clean buildozer
       run: |
@@ -58,7 +71,7 @@ jobs:
     - name: Build APK
       run: |
         buildozer android clean
-        buildozer android debug
+        buildozer -v android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
