--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,41 +46,32 @@ jobs:
           automake \
           pkg-config
 
-    - name: Install buildozer and dependencies
+    - name: Install buildozer
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install --upgrade Cython==0.29.33 virtualenv
         pip install --upgrade buildozer
-        pip install --upgrade python-for-android
 
-    - name: Set up build directories
+    - name: Clone python-for-android
       run: |
-        sudo mkdir -p /home/runner/.buildozer
-        sudo chown -R $USER:$USER /home/runner/.buildozer
-        sudo mkdir -p $GITHUB_WORKSPACE/.buildozer
-        sudo chown -R $USER:$USER $GITHUB_WORKSPACE/.buildozer
-
-    - name: Initialize python-for-android
-      run: |
-        mkdir -p /home/runner/.buildozer/android/platform
-        git clone --depth=1 https://github.com/kivy/python-for-android.git /home/runner/.buildozer/android/platform/python-for-android
-        cd /home/runner/.buildozer/android/platform/python-for-android
+        git clone --depth=1 https://github.com/kivy/python-for-android.git
+        cd python-for-android
         python setup.py install
-        
-        # Create symlink to ensure buildozer finds p4a
+
+    - name: Set up build environment
+      run: |
+        mkdir -p $GITHUB_WORKSPACE/.buildozer
         mkdir -p $GITHUB_WORKSPACE/.buildozer/android/platform
-        ln -s /home/runner/.buildozer/android/platform/python-for-android $GITHUB_WORKSPACE/.buildozer/android/platform/python-for-android
+        cp -r python-for-android $GITHUB_WORKSPACE/.buildozer/android/platform/
+        chmod -R 755 $GITHUB_WORKSPACE/.buildozer
 
     - name: Accept Android licenses
       run: |
         yes | sudo ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
-    - name: Clean and build APK
+    - name: Build APK
       run: |
-        rm -rf .buildozer
-        rm -rf bin
-        buildozer android clean
-        buildozer -v android debug
+        buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
