--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,13 +60,7 @@ jobs:
         mkdir -p $GITHUB_WORKSPACE/.buildozer/android/platform
         git clone --depth=1 https://github.com/kivy/python-for-android.git $GITHUB_WORKSPACE/.buildozer/android/platform/python-for-android
         cd $GITHUB_WORKSPACE/.buildozer/android/platform/python-for-android
-        # Initialize libtool and autoconf
-        libtoolize --force
-        aclocal
-        autoheader
-        automake --force-missing --add-missing
-        autoconf
-        # Run configure to generate proper files
+        # Use the existing configure script directly
         ./configure
         python setup.py install
         cd $GITHUB_WORKSPACE
