--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,23 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
+          cache: 'pip'
+
+      - name: Cache Buildozer dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            .buildozer
+            ~/.buildozer
+          key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+          restore-keys: |
+            ${{ runner.os }}-buildozer-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install buildozer
-          pip install cython==0.29.33
+          pip install --upgrade Cython==0.29.33
+          pip install --upgrade buildozer
           sudo apt-get update
           sudo apt-get install -y \
             python3-pip \
@@ -43,7 +54,23 @@ jobs:
             zlib1g-dev \
             libgstreamer1.0 \
             gstreamer1.0-plugins-base \
-            gstreamer1.0-plugins-good
+            gstreamer1.0-plugins-good \
+            openjdk-17-jdk \
+            autoconf \
+            automake \
+            libtool \
+            pkg-config
+
+      - name: Download Android SDK and NDK
+        run: |
+          mkdir -p ~/.buildozer/android/platform
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip -q commandlinetools-linux-9477386_latest.zip -d ~/.buildozer/android/platform/
+          mv ~/.buildozer/android/platform/cmdline-tools ~/.buildozer/android/platform/latest
+          mkdir -p ~/.buildozer/android/platform/cmdline-tools
+          mv ~/.buildozer/android/platform/latest ~/.buildozer/android/platform/cmdline-tools/
+          yes | ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --licenses
+          ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
 
       - name: Build with Buildozer
         run: |
@@ -54,3 +81,4 @@ jobs:
         with:
           name: trendingvideos-debug
           path: bin/*.apk
+          if-no-files-found: error
