--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Checkout Repository
-        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -22,23 +20,10 @@ jobs:
           python-version: '3.9'
           cache: 'pip'
 
-      - name: Cache Buildozer dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            .buildozer
-            ~/.buildozer
-          key: ${{ runner.os }}-buildozer-${{ hashFiles('requirements.txt', 'buildozer.spec') }}
-          restore-keys: |
-            ${{ runner.os }}-buildozer-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          sudo apt update && sudo apt upgrade -y
-          sudo apt install -y ant unzip wget tar libffi-dev libssl-dev python3-pip
-          pip install --upgrade pip setuptools cython virtualenv
-          pip install -r requirements.txt
+          pip install buildozer cython==0.29.33
           sudo apt-get update
           sudo apt-get install -y \
             python3-pip \
@@ -64,35 +49,36 @@ jobs:
             automake \
             libtool \
             pkg-config \
-            aidl
+            zip \
+            unzip \
+            curl
 
       - name: Set up Android SDK and NDK
         run: |
-          mkdir -p ~/.buildozer/android/platform
+          mkdir -p ~/.buildozer/android/platform/
+          export ANDROID_HOME=~/.buildozer/android/platform/android-sdk
+          export ANDROID_NDK_HOME=~/.buildozer/android/platform/android-ndk-r25b
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+          
+          # Download and setup Android SDK
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip -q commandlinetools-linux-9477386_latest.zip -d ~/.buildozer/android/platform/
-          mv ~/.buildozer/android/platform/cmdline-tools ~/.buildozer/android/platform/latest
-          mkdir -p ~/.buildozer/android/platform/cmdline-tools
-          mv ~/.buildozer/android/platform/latest ~/.buildozer/android/platform/cmdline-tools/
-          yes | ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --licenses
-          ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --install "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
-          echo "ANDROID_SDK_ROOT=~/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
-          echo "ANDROID_NDK_HOME=~/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
-          echo "PATH=$PATH:~/.buildozer/android/platform/android-sdk/build-tools/33.0.0" >> $GITHUB_ENV
-      
-      - name: Install Buildozer and Dependencies
-        run: |
-          pip install buildozer cython python-for-android
+          unzip -q commandlinetools-linux-9477386_latest.zip -d cmdline-tools
+          mkdir -p $ANDROID_HOME/cmdline-tools
+          mv cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
+          
+          # Accept licenses and install required packages
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install \
+            "platforms;android-33" \
+            "build-tools;33.0.0" \
+            "platform-tools" \
+            "ndk;25.2.9519653"
+          
+          # Create symlink for NDK
+          ln -s $ANDROID_HOME/ndk/25.2.9519653 $ANDROID_NDK_HOME
 
       - name: Build with Buildozer
         run: |
-          export ANDROID_HOME=$HOME/android-sdk
-          export ANDROID_NDK_HOME=$HOME/android-sdk/ndk/25.2.9519653
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-          export PATH=$ANDROID_HOME/platform-tools:$PATH
-          export PATH=$ANDROID_NDK_HOME:$PATH
-
-          buildozer android clean
           buildozer android debug
 
       - name: Upload APK
